packages/v1/CHANGELOG.md
# @traderjoe-xyz/sdk

## 5.0.12

### Patch Changes

- 0e5f72b: add sonic
- Updated dependencies [0e5f72b]
  - @traderjoe-xyz/sdk-core@2.0.11

## 5.0.11

### Patch Changes

- 85276fe: fix monad testnet addresses

## 5.0.10

### Patch Changes

- ab05c71: add monad testnet addresses
- Updated dependencies [ab05c71]
  - @traderjoe-xyz/sdk-core@2.0.10

## 5.0.9

### Patch Changes

- a1e9168: add solana
- Updated dependencies [a1e9168]
  - @traderjoe-xyz/sdk-core@2.0.9

## 5.0.8

### Patch Changes

- 0aa58fe: add monad testnet
- Updated dependencies [0aa58fe]
  - @traderjoe-xyz/sdk-core@2.0.8

## 5.0.7

### Patch Changes

- 366535f: add base network
- Updated dependencies [366535f]
  - @traderjoe-xyz/sdk-core@2.0.7

## 5.0.6

### Patch Changes

- Updated dependencies [3a8328f]
  - @traderjoe-xyz/sdk-core@2.0.6

## 5.0.5

### Patch Changes

- 6af01a8: add berachain mainnet
- Updated dependencies [6af01a8]
  - @traderjoe-xyz/sdk-core@2.0.5

## 5.0.4

### Patch Changes

- Updated dependencies [cdcf75e]
  - @traderjoe-xyz/sdk-core@2.0.4

## 5.0.3

### Patch Changes

- 06fc276: add berachain artio
- Updated dependencies [06fc276]
  - @traderjoe-xyz/sdk-core@2.0.3

## 5.0.2

### Patch Changes

- 76fb1d0: fix vite
- Updated dependencies [76fb1d0]
  - @traderjoe-xyz/sdk-core@2.0.2

## 5.0.1

### Patch Changes

- 6e905b7: bump viem to v2
- Updated dependencies [6e905b7]
  - @traderjoe-xyz/sdk-core@2.0.1

## 5.0.0

### Major Changes

- 9ab3159: add mantle chain id

### Patch Changes

- Updated dependencies [9ab3159]
  - @traderjoe-xyz/sdk-core@2.0.0

## 4.1.2

### Patch Changes

- 8a0aa52: update boring helper address

## 4.1.1

### Patch Changes

- 3dfd4a5: update farm lens v2 address

## 4.1.0

### Minor Changes

- 8065d41: Add support for Ethereum

### Patch Changes

- Updated dependencies [8065d41]
  - @traderjoe-xyz/sdk-core@1.1.0

## 4.0.8

### Patch Changes

- 2f2e1c4: Package release from mono-repo
- Updated dependencies [2f2e1c4]
  - @traderjoe-xyz/sdk-core@1.0.1
